@@ -33,6 +33,7 @@ Release 0.1.2 - 04/24/2008
    HBASE-478   offlining of table does not run reliably
    HBASE-618   We always compact if 2 files, regardless of the compaction threshold setting
    HBASE-619   Fix 'logs' link in UI
+   HBASE-620   testmergetool failing in branch and trunk since hbase-618 went in
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
